--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
   <version>1.0-SNAPSHOT</version>
   <name>Parent</name>
   <description>Just a pom that makes it easy to build both projects at the same time.</description>
+  <configuration>
+     <webappDirectory>/var/lib/jenkins/workspace/pipeline_1/deploy/</webappDirectory>
+  </configuration>
 
   <modules>
     <module>multi-module</module>
@@ -16,7 +19,7 @@
   </modules>
 
   <prerequisites>
-    <maven>3.0.3</maven>
+    <maven>3.0.3</maven>   
   </prerequisites>
 
 </project>
